--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  json_annotation: ^4.1.0
+  json_annotation:
   rxdart: ^0.26.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.0.0
-  json_serializable: ^3.2.2
+  build_runner: ^2.0.4
+  json_serializable:
+
 
 flutter:
   plugin:
